Fixes #1105, #1147 - ClayCSS: Subnav Tbar Primary should support labels, break to new line, have disabled state, and `.component-link` color should have more contrast
ClayCSS: (#1105) Mixin `clay-label-size` added options to configure `margin-bottom`, `margin-left`, `margin-right`, `margin-top`

ClayCSS: (#1105) Mixin `clay-tbar-variant` added options to configure `$padding-x`, `$padding-y`, `$item-justify-content`, `$btn-monospaced-margin-x`, `$btn-monospaced-margin-y`, `$link-monospaced-margin-x`, `$link-monospaced-margin-y`, `$label-size`

ClayCSS (#1105) Tbar added option to break to new lines with `.tbar-nav-shrink`, `.tbar-nav-wrap`, `.subnav-tbar-inline-xs-down`, `.subnav-tbar-inline-sm-down`, `.subnav-tbar-inline-md-down`, `.subnav-tbar-inline-lg-down`, `.subnav-tbar-inline-xl-down`

ClayCSS: (#1105) Label disabled `.close` hover state should look the same

ClayCSS: (#1105) Mixin `clay-link` add option to configure `disabled-text-decoration`

ClayCSS: (#1105) New mixin `clay-label-variant` for creating custom label colors

ClayCSS: (#1147) Subnav Tbar Primary changed `.component-link` color to have more contrast and added `.subnav-tbar-primary.subnav-tbar-disabled` colors

ClayCSS: (#1105) Tbar renamed `.subnav-tbar-inline-*-down` to `.tbar-inline-*-down`

--- a/packages/clay-css/src/scss/atlas/variables/_tbar.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_tbar.scss
@@ -4,13 +4,31 @@ $component-tbar: map-merge((
 	color: $secondary
 ), $component-tbar);
 
-// Subnav Tbar
+// Subnav Tbar Primary
 
-$subnav-tbar: () !default;
-$subnav-tbar: map-merge((
-	btn-height: 1.4375rem,
-	btn-monospaced-font-size: 0.8125rem
-), $subnav-tbar);
+$subnav-tbar-primary-component-link: () !default;
+$subnav-tbar-primary-component-link: map-merge((
+	disabled-opacity: 0.65
+), $subnav-tbar-primary-component-link);
+
+$subnav-tbar-primary-component-label-close: () !default;
+$subnav-tbar-primary-component-label-close: map-merge((
+	disabled-opacity: 0.65
+), $subnav-tbar-primary-component-label-close);
+
+// Subnav Tbar Primary Disabled
+
+$subnav-tbar-primary-disabled-component-label: () !default;
+$subnav-tbar-primary-disabled-component-label: map-merge((
+	border-color: #8E94AA
+), $subnav-tbar-primary-disabled-component-label);
+
+$subnav-tbar-primary-disabled: () !default;
+$subnav-tbar-primary-disabled: map-merge((
+	color: #8E94AA
+), $subnav-tbar-primary-disabled);
+
+// Subnav Tbar Light
 
 $subnav-tbar-light: () !default;
 $subnav-tbar-light: map-merge((
